Finished DSP principles.

--- a/planning.tex
+++ b/planning.tex
@@ -201,7 +201,7 @@ the performance of the solution $M$.
     \path [line] (handling) -- (learning);
     \path [line, dashed] (3, -7) -- (model);
 
-    \node [block] (preprocess) at (-1.5, -9) {Preprocessing};
+    \node [block] (preprocess) at (-1.5, -9) {Preprocessor};
     \node [block] (prediction) at (1.5, -9) {Predictor};
 
     \path [line, dashed] (handling) -- (preprocess);
