Finished DSP full draft.

--- a/glossary.tex
+++ b/glossary.tex
@@ -14,6 +14,7 @@
 \newabbreviation{pmf}{PMF}{probability mass function}
 \newabbreviation{pdf}{PDF}{probability density function}
 \newabbreviation{cdf}{CDF}{cumulative distribution function}
+\newabbreviation{cicd}{CI/CD}{Continuous Integration/Continuous Deployment}
 
 % ontology
 \newglossaryentry{ontology}{%
