--- a/planning.tex
+++ b/planning.tex
@@ -202,7 +202,7 @@ the performance of the solution $M$.
     \path [line, dashed] (3, -7) -- (model);
 
     \node [block] (preprocess) at (-1.5, -9) {Preprocessor};
-    \node [block] (prediction) at (1.5, -9) {Predictor};
+    \node [block] (prediction) at (1.5, -9) {Model};
 
     \path [line, dashed] (handling) -- (preprocess);
     \path [line, dashed] (learning) -- (prediction);
