Finished our DSP.

--- a/planning.tex
+++ b/planning.tex
@@ -69,7 +69,7 @@ plan.  These elements are:
     pipeline and the ones of the model}: Techniques that find a solution for the task.
     For us, a task includes both adjusting the appropriate data-handling
     pipeline and learning the model.  The theoretical basis for these techniques is in
-    \cref{chap:slt}, and the practical aspects are in \cref{chap:handling,chap:ml}.
+    \cref{chap:slt}, and the practical aspects of data handling are in \cref{chap:handling}.
   \item \textbf{Performance measure}: The metric that will be used to evaluate the
     performance of the model.  Refer to \cref{chap:evaluation} for more information.
 \end{itemize}
