--- a/inductive.tex
+++ b/inductive.tex
@@ -240,8 +240,8 @@ $|\theta|$ is not fixed beforehand, the model is called \emph{nonparametric}.  P
 models are usually simpler and faster, but they are less flexible.  In other words, it is
 up to the researcher to choose the best model ``size'' for the problem.  If the model is
 too small, it will not be able to capture the complexity of the data.  If the model is too
-large, it will be too complex, too slow to train and might overfit to the data. Non
-parametric models are more flexible, but they usually require more data to be trained.
+large, it will be too complex, too slow to train and might overfit to the data.
+Nonparametric models are more flexible, but they usually require more data to be trained.
 
 \section{ERM inductive principle}
 
