--- a/project.tex
+++ b/project.tex
@@ -755,7 +755,7 @@ projects, we must compare the phases of our approach with the other methodologie
     \midrule
     Bus. understanding & Define the goal & Product backlog \\
     Data understanding & Collect/manage data & Data sprint \\
-    Data preparation & Collect/manage data & Data sprint \\
+    Data preparation & Collect/manage data & Data/solution sprint \\
     Modeling & Build the model & Solution sprint \\
     Evaluation & Evaluate the model & Solution sprint \\
     & Present results & Sprint reviews \\
