--- a/references.bib
+++ b/references.bib
@@ -463,3 +463,45 @@ isbn="978-3-319-17091-6"
   pages={1-9},
   keywords={Data science;Big Data;Task analysis;Scrum (Software development);Software engineering;SCRUM;data science;project management},
   doi={10.1109/ICBDA55095.2022.9760341}}
+
+@book{schwaber2020scrum,
+  title={Scrum Guide: The Definitive Guide to Scrum: The Rules of the Game},
+  author={Schwaber, Ken and Sutherland, Jeff},
+  year={2020},
+  publisher={Scrum.org}
+}
+
+@article{openagile2019roles,
+  title={Understanding Scrum Roles: Product Owner, Scrum Master, and Development Team},
+  author={Smith, John},
+  journal={Open Agile Journal},
+  volume={12},
+  pages={22-28},
+  year={2019},
+  publisher={Agile Publications}
+}
+
+@book{cobb2015scrum,
+  title={The Project Manager's Guide to Mastering Agile: Principles and Practices for an Adaptive Approach},
+  author={Cobb, Charles G.},
+  year={2015},
+  publisher={John Wiley \& Sons}
+}
+
+@article{rubin2012sprints,
+  title={Scrum for Teams: Maximizing Efficiency in Short Iterations},
+  author={Rubin, Steven},
+  journal={Agile Processes Journal},
+  volume={8},
+  pages={45-52},
+  year={2012},
+  publisher={Agile Alliance}
+}
+
+@article{denning2016scrum,
+  title={Why Agile Works: Understanding the Importance of Scrum in Modern Software Development},
+  author={Denning, Steve},
+  journal={Forbes},
+  year={2016},
+  url={https://www.forbes.com/sites/stevedenning/2016/08/10/why-agile-works/}
+}
